# canable

./: .gitignore  AGENTS.md  CANABLE_PROTOCOL_SPEC.md  CANGUI_I18N_SPEC.md  CANable2.5.spec  CLAUDE.md  PERFORMANCE_ANALYSIS.md  README.md  boot_protocol_spec.md  cangui.py  debug_can_bus.py  diag.py  diagnose_can.py  example.py  pyproject.toml  requirements.txt  scan_data_bitrate.py  scan_fd_data_bitrate.py  send_list.csv  settings.json  test_canfd_receive.py  trace.csv  trace_log.csv  zdt_canable.py  zdt_canable_slcan.py
.kilo/plans/: 1783174630687-fix-canfd-receive.md  1783244906383-wayland-dock-freeze.md
.trae/documents/: canable-25-driver-rewrite.md  driver-cleanup-plan.md
CANable-2.5-firmware-Slcan-and-Candlelight-main/: Build_Candlelight.cmd  Build_Slcan.cmd  Make_G431_Candle_MksMakerbase  Make_G431_Candle_Openlightlabs  Make_G431_Slcan_MksMakerbase  Make_G431_Slcan_Openlightlabs  Make_Rules.mk  README.md  User & Developer Manual.htm  build.sh  build_slcan.sh
CANable-2.5-firmware-Slcan-and-Candlelight-main/Build_STM32G431xx_Candlelight_MksMakerbase/: STM32G431_Candlelight2.5_MksMakerbase.elf  STM32G431_Candlelight2.5_MksMakerbase.hex  STM32G431_Candlelight2.5_MksMakerbase.map
canable_sdk/: README.md  __init__.py  cli.py  constants.py  driver.py  frame.py  protocol.py
candleLight_fw_canable_v2_fd-master/: README.md
cangui/: __init__.py  __main__.py  filters.py  i18n.py  icons.py  main_window.py  plugin_host.py  send.py  style.py  title_bar.py  trace.py  worker.py
plugins/: PLUGIN_DEV_GUIDE.md  __init__.py
plugins/boot_upgrade/: __init__.py  plugin.py  (+3 more)
(+61 files in other folders)
